--- a/Portfolio/Dp.html
+++ b/Portfolio/Dp.html
@@ -40,11 +40,9 @@
            <div>
             <h5>Role: UX Researcher, Client Contact & Program Manager</h5>
            </div>
-        <div>
-      <a class="btn btn-primary"  role="button">Scroll down</a>
 
-    </div>
-    <a href="#section3">
+    <a class="btn btn-primary" href="#section3">
+      Scroll down
     <p><i class="arrow down"></i></p>
   </a>
   </div>
