--- a/Portfolio/Ecohomes.html
+++ b/Portfolio/Ecohomes.html
@@ -40,11 +40,9 @@
            <div>
             <h5>Course: Interaction Design</h5>
            </div>
-        <div>
-      <a class="btn btn-primary"  role="button">Scoll down</a>
 
-    </div>
-    <a href="#section3">
+    <a class="btn btn-primary" href="#section3">
+      Scroll down
     <p><i class="arrow down"></i></p>
   </a>
   </div>
@@ -87,11 +85,11 @@ Having received a total of 53 responses, following were the key takeaways: </p>
   </div>
 
   <ul class="socialnav">
-     <a href="https://www.linkedin.com/in/nalinbhatia/" target="_blank"><img src="https://png.icons8.com/ios/50/FFFFFF/linkedin-filled.png" class="icon"></a>
-    <a href="https://plus.google.com/116453238195990192577" target="_blank"><img src="https://png.icons8.com/ios/50/FFFFFF/google-plus.png" class="icon"></a>
-    <a href="https://www.facebook.com/nalinb1" target="_blank"><img src="https://png.icons8.com/ios-glyphs/50/FFFFFF/facebook.png" class="icon"></a>
-    <a href="https://twitter.com/nalin_bhatia" target="_blank"><img src="https://png.icons8.com/ios/50FFFFFF/twitter-filled.png" class="icon"></a>
-  </ul>
+    <a href="https://www.linkedin.com/in/nalinbhatia/" target="_blank"><img src="https://png.icons8.com/ios/50/FFFFFF/linkedin-filled.png" class="icon" alt="linkedin-nalin"></a>
+   <a href="https://plus.google.com/116453238195990192577" target="_blank"><img src="https://png.icons8.com/ios/50/FFFFFF/google-plus.png" class="icon"  alt="google-nalin"></a>
+   <a href="https://www.facebook.com/nalinb1" target="_blank"><img src="https://png.icons8.com/ios-glyphs/50/FFFFFF/facebook.png" class="icon"  alt="facebook-nalin"></a>
+   <a href="https://twitter.com/nalin_bhatia" target="_blank"><img src="https://png.icons8.com/ios/50FFFFFF/twitter-filled.png" class="icon"  alt="twitter-nalin"></a>
+ </ul>
 </div>
 </div>
 </footer>
