--- a/Portfolio/id.html
+++ b/Portfolio/id.html
@@ -40,11 +40,9 @@
            <div>
             <h5>Role: Instructional Designer, Interaction Designer</h5>
            </div>
-        <div>
-      <a class="btn btn-primary"  role="button">Scroll down</a>
 
-    </div>
-    <a href="#section3">
+    <a class="btn btn-primary" href="#section3">
+      Scroll down
     <p><i class="arrow down"></i></p>
   </a>
   </div>
@@ -76,9 +74,9 @@
 
 
 <div class = "oldimages">
-  <img src="Images/oi1.png" class="oig">
-  <img src="Images/oi2.png" class="oig">
-  <img src="Images/oi3.png" class="oig">
+  <img src="Images/oi1.png" alt = "origina1" class="oig">
+  <img src="Images/oi2.png" alt = "origina2" class="oig">
+  <img src="Images/oi3.png" alt = "origina3" class="oig">
 </div>
 
 <div class="paras">
@@ -88,9 +86,9 @@
 
 
 <div class = "oldimages">
-  <img src="Images/ni2.png" class="oig">
-  <img src="Images/ni1.png" class="oig">
-  <img src="Images/ni3.png" class="oig">
+  <img src="Images/ni2.png" alt = "new1" class="oig">
+  <img src="Images/ni1.png" alt = "new2" class="oig">
+  <img src="Images/ni3.png" alt = "new3" class="oig">
 </div>
 
 <h4>Final Product
@@ -117,11 +115,11 @@ Your browser does not support the video tag.
   </div>
 
   <ul class="socialnav">
-     <a href="https://www.linkedin.com/in/nalinbhatia/" target="_blank"><img src="https://png.icons8.com/ios/50/FFFFFF/linkedin-filled.png" class="icon" alt="nalin bhatia linkedin"></a>
-    <a href="https://plus.google.com/116453238195990192577" target="_blank"><img src="https://png.icons8.com/ios/50/FFFFFF/google-plus.png" class="icon" alt="nalin bhatia google google-plus"></a>
-    <a href="https://www.facebook.com/nalinb1" target="_blank"><img src="https://png.icons8.com/ios-glyphs/50/FFFFFF/facebook.png" class="icon" alt="nalin bhatia facebook"></a>
-    <a href="https://twitter.com/nalin_bhatia" target="_blank"><img src="https://png.icons8.com/ios/50FFFFFF/twitter-filled.png" class="icon" alt="nalin bhatia twitter"></a>
-  </ul>
+    <a href="https://www.linkedin.com/in/nalinbhatia/" target="_blank"><img src="https://png.icons8.com/ios/50/FFFFFF/linkedin-filled.png" class="icon" alt="linkedin-nalin"></a>
+   <a href="https://plus.google.com/116453238195990192577" target="_blank"><img src="https://png.icons8.com/ios/50/FFFFFF/google-plus.png" class="icon"  alt="google-nalin"></a>
+   <a href="https://www.facebook.com/nalinb1" target="_blank"><img src="https://png.icons8.com/ios-glyphs/50/FFFFFF/facebook.png" class="icon"  alt="facebook-nalin"></a>
+   <a href="https://twitter.com/nalin_bhatia" target="_blank"><img src="https://png.icons8.com/ios/50FFFFFF/twitter-filled.png" class="icon"  alt="twitter-nalin"></a>
+ </ul>
 </div>
 </div>
 </footer>
