--- a/Portfolio/yf.html
+++ b/Portfolio/yf.html
@@ -40,11 +40,9 @@
            <div>
             <h5>Role: UX Researcher, Client Contact, Program Manager</h5>
            </div>
-        <div>
-      <a class="btn btn-primary"  role="button">Scroll down</a>
-
-    </div>
-    <a href="#section3">
+        
+    <a class="btn btn-primary" href="#section3">
+      Scroll down
     <p><i class="arrow down"></i></p>
   </a>
   </div>
@@ -75,7 +73,7 @@
     <li><img src="Images/icons8-confusion-50.png" alt="7" class="img">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;What are the users’ goals, motivations, and behavior patterns when tracking financial info. and managing their investments?</li>
     <li><img src="Images/icons8-smartphone-tablet-50.png" alt="1" class="img">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;What drives their selection of products when in managing finances and investments?</li>
     <li><img src="Images/icons8-students-50.png" alt="4" class="img">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;What factors appeal to the younger section of the population?</li>
-    <li><img src="Images/icons8-touchscreen-50.png" alt="4" class="img">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;How do these users interact with Yahoo Finance and other financial tools and what frustrations do they experience ?</li>
+    <li><img src="Images/icons8-touchscreen-50.png" alt="5" class="img">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;How do these users interact with Yahoo Finance and other financial tools and what frustrations do they experience ?</li>
   </ul>
 
 </div>
@@ -108,7 +106,7 @@
 <p>The interview analysis included recording interviews, converting audio recordings into transcripts, and building an affinity wall to organize data and uncover insights. We extracted over 100 pieces of notes from the interview transcripts and turned them into a series of discrete affinity notes. Then we grouped the notes into clusters according to similar ideas or themes, which made up an affinity wall (shown below).
 </p>
 ​
-<img src="Images/SI 622 Affinity Wall.png" alt="methods" class="image2">
+<img src="Images/SI 622 Affinity Wall.png" alt="comp-eval" class="image2">
 
 <h4>Comparative Evaluation
   <div id="line">
@@ -123,7 +121,7 @@
 <h6>Quote Summary Page (QSP)</h6>
 <p>The Quote Summary Page (QSP)  is a common element present in all of the competitor applications, and is also the most crucial element in a financial application. We examined and compared all the QSP pages, and developed a 2x2 space chart to describe the quote stock page based on two dimensions - information architecture and visual design:
 </p>
-<img src="Images/axes1.png" alt="methods" class="image2">
+<img src="Images/axes1.png" alt="QSP" class="image2">
 
 <h4>Survey
   <div id="line">
@@ -151,11 +149,11 @@
   </div>
 
   <ul class="socialnav">
-     <a href="https://www.linkedin.com/in/nalinbhatia/" target="_blank"><img src="https://png.icons8.com/ios/50/FFFFFF/linkedin-filled.png" class="icon"></a>
-    <a href="https://plus.google.com/116453238195990192577" target="_blank"><img src="https://png.icons8.com/ios/50/FFFFFF/google-plus.png" class="icon"></a>
-    <a href="https://www.facebook.com/nalinb1" target="_blank"><img src="https://png.icons8.com/ios-glyphs/50/FFFFFF/facebook.png" class="icon"></a>
-    <a href="https://twitter.com/nalin_bhatia" target="_blank"><img src="https://png.icons8.com/ios/50FFFFFF/twitter-filled.png" class="icon"></a>
-  </ul>
+    <a href="https://www.linkedin.com/in/nalinbhatia/" target="_blank"><img src="https://png.icons8.com/ios/50/FFFFFF/linkedin-filled.png" class="icon" alt="linkedin-nalin"></a>
+   <a href="https://plus.google.com/116453238195990192577" target="_blank"><img src="https://png.icons8.com/ios/50/FFFFFF/google-plus.png" class="icon"  alt="google-nalin"></a>
+   <a href="https://www.facebook.com/nalinb1" target="_blank"><img src="https://png.icons8.com/ios-glyphs/50/FFFFFF/facebook.png" class="icon"  alt="facebook-nalin"></a>
+   <a href="https://twitter.com/nalin_bhatia" target="_blank"><img src="https://png.icons8.com/ios/50FFFFFF/twitter-filled.png" class="icon"  alt="twitter-nalin"></a>
+ </ul>
 </div>
 </div>
 </footer>
